dodanie mobilnej wersji

--- a/EsSplit/templates/SignUp.html
+++ b/EsSplit/templates/SignUp.html
@@ -7,6 +7,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/test.css' %}">
     <link rel="stylesheet" href="{% static 'css/accessibility.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-p7QstapH7YLAqVzR+C7kWgjHHwKVw3+wBzlnvjWorldIJYRtUknUIP0EjAnvCbxaayQvMsZ0MY3BWfBmuscZLSw=="
         crossorigin="anonymous">
