--- a/EsSplit/templates/disable_2fa.html
+++ b/EsSplit/templates/disable_2fa.html
@@ -8,6 +8,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/accessibility.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'img/favv16.png' %}">
     <style>
         .warning-icon {
