--- a/EsSplit/templates/lockout.html
+++ b/EsSplit/templates/lockout.html
@@ -6,6 +6,7 @@
     <title>Blokada logowania</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'img/favv16.png' %}">
 
     <style>
