--- a/EsSplit/static/css/login.css
+++ b/EsSplit/static/css/login.css
@@ -71,9 +71,9 @@ form .txt_field {
 .txt_field span::before {
     content: '';
     position: absolute;
-    top: 40px;
+    bottom: 0;
     left: 0;
-    width: 100%;
+    width: 0;
     height: 2px;
     background: #2691d9;
     transition: width 0.2s ease;
@@ -85,7 +85,8 @@ form .txt_field {
     color: #2691d9;
 }
 
-.txt_field input:focus~span::before {
+.txt_field input:focus~span::before,
+.txt_field input:valid~span::before {
     width: 100%;
 }
 
