--- a/EsSplit/templates/login.html
+++ b/EsSplit/templates/login.html
@@ -3,10 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Podziel Rachunek {% block title %}{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/accessibility.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'img/favv16.png' %}">
 
     <style>
